--- a/Bank-System/Bank-System.vcxproj
+++ b/Bank-System/Bank-System.vcxproj
@@ -143,7 +143,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Menus.h" />
-    <ClInclude Include="Structures.h" />
+    <ClInclude Include="Startup.h" />
+    <ClInclude Include="Structures-functions.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
