-----------DAY 7------------ ----------12-01-2021--------- --> File handling on Deposit --> Return Current TIme and Date Function

--- a/Bank-System/Bank-System.vcxproj
+++ b/Bank-System/Bank-System.vcxproj
@@ -142,6 +142,9 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="HEADER_FILES\Menus.h" />
+    <ClInclude Include="HEADER_FILES\Startup.h" />
+    <ClInclude Include="HEADER_FILES\Structures-functions.h" />
     <ClInclude Include="Menus.h" />
     <ClInclude Include="Startup.h" />
     <ClInclude Include="Structures-functions.h" />
